force-app/main/default/objects/Patient_Diagnose__c/Patient_Diagnose__c.object-meta.xml
<CustomObject>
    <label>Patient Diagnose</label>
    <nameField>
        <displayFormat>PDN-{00000000}</displayFormat>
        <label>Patient Diagnose Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Diagnoses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>