force-app/main/default/objects/Patient_Diagnose__c/fields/Diagnose__c.field-meta.xml
<CustomField>
    <fullName>Diagnose__c</fullName>
    <label>Diagnose</label>
    <referenceTo>Diagnose__c</referenceTo>
    <relationshipName>Pacient_Diagnoses</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>