force-app/main/default/objects/Patient_Diagnose__c/fields/Encounter__c.field-meta.xml
<CustomField>
    <fullName>Encounter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Encounter</label>
    <referenceTo>Encounter__c</referenceTo>
    <relationshipLabel>Patient Diagnoses</relationshipLabel>
    <relationshipName>Patient_Diagnoses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>